# Code

./: README.md
2022/C#/Catalog/: Catalog.csproj  README.md  Startup.cs
2022/DevOps/portainer/: docker-compose.yaml
2022/DevOps/prom_grafana/: README.md  docker-compose.yaml
2022/Go/: err.go  fib.go  goroutine.go  multiple_tags.go
2022/Go/Cellphone/: .dockerignore  Dockerfile.api  Dockerfile.mysql  Makefile  TODO.md  docker-compose.yaml  go.mod  go.sum  vars.sh
2022/Go/fixtures/: grades.csv  main.go
2022/Go/proto/: .gitignore  Makefile  go.mod
2022/Go/rollercoaster/: server.go
2022/Java/: FileReadWrite.java  PredicateTest.java  RecordType.java
2022/Python/: decorator.py
2022/Python/avg_color/: main.py
2022/Rust/grpc/: Cargo.toml
2022/Scripts/: log.sh
Texts/: README.md  datasets.md
Texts/2022/: OSA.md  SaaS.md  linux.md  prometheus.md  protobuff.md  pubsub.md
Texts/2022/Go/: advanced_testing.md  code_review_comments.md  hex_arch_go.md  practical_go.md
Texts/2022/k8s/: components.md  lifecycle.md
certs/: terraform.md
certs/aws/: clf-c01.md  saa-c03.md
certs/azure/: az900.md  azure_services.md  data_services.md  data_storage.md  dp900.md  links.md
certs/azure/dp900/: _index.md  dp900_01_core_data_concepts.md  dp900_01_data_concepts.md
certs/gcp/: links.md
projects/C#/: .gitignore
projects/C#/Catalog/: Mappings.cs  Program.cs
projects/DevOps/envoy/: README.md  docker-compose.yml
projects/DevOps/minio/: docker-compose.yml
projects/Java/: CopyOf.java  StringApi.java
projects/R/: gap.R  iris.R  ms.R  plot.R  plot_output.R  shiny.R  sw.R
projects/go/: rot13.go
projects/java/: Equals.java
projects/python/: upscale.py
projects/rust/dep_viewer/: Cargo.toml  README.md
projects/rust/dep_viewer/src/: display.rs  fetch.rs  main.rs  process.rs
projects/rust/game/: Cargo.toml  rapidfire.ron  templates.ron
projects/rust/game/src/: battle.rs  error.rs  factory.rs
projects/rust/the_stack/: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml  makefile
projects/rust/the_stack/docker/postgresql/: Dockerfile  database.pgsql
projects/rust/the_stack/docker/redis/: Dockerfile
projects/rust/the_stack/migrations/: 20240317062844_initial.sql  20240317062906_data.sql
projects/rust/the_stack/src/: error.rs  lib.rs  main.rs  metrics.rs  tracing.rs
projects/rust/the_stack/src/api/: metrics.rs  mod.rs
projects/rust/the_stack/src/cache/: mod.rs
projects/rust/the_stack/src/database/: mod.rs
projects/rust/the_stack/src/model/: mod.rs  spell.rs
scripts/: git_multi_repo.sh  init.sh  new_nestjs_project.sh  new_ts_project.sh
texts/: CI_CD.md  acid.md  batch_vs_stream_processing.md  bi.md  big_data.md  data_analytics.md  data_mining.md  data_modeling.md  dns.md  etl_vs_elt.md  gog.md  kips.md  linux.md  pep_pdp.md  pubsub.md  raci.md  relational_dbs.md  serverless.md  service_mesh.md  sre.md  tsql.md
texts/Go/: code_review_comments.md
texts/aws/: ssh_over_sessionmanager.md
texts/k8s/: components.md  concepts.md  lifecycle.md
(+226 files in other folders)
