[package]
name = "dep_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1" }
clap = { version = "4", features = ["derive"] }
toml = { version = "0.7" }
crates_io_api = { version = "0.8" }
comfy-table = { version = "6" }
log = "0.4"
env_logger = "0.10"
