[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
dotenv = "0.15.0"
fastrand = "1.9.0"

[profile.dev]
opt-level = 3
