[package]
name = "the_stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
