[package]
name = "the_stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.4"
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
prometheus = "0.13.3"
redis = { version = "0.25.1", features = ["tokio-rustls-comp", "json"] }
redis-macros = "0.2.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-retry = "0.3.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[[bin]]
name = "the_stack"
path = "src/main.rs"
